--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ out/
 !**/src/test/**/out/
 .kotlin
 
+### Java build artifacts ###
+*.class
+
+# pastas comuns de build (caso você use Maven/Gradle no futuro)
+target/
+build/
+
 ### Eclipse ###
 .apt_generated
 .classpath
